update: refactor to hexagonal architecture
